#2062 Fix bower installation and alignment.

--- a/html/themes/custom/pmmi_bootstrap/sass/components/_views.scss
+++ b/html/themes/custom/pmmi_bootstrap/sass/components/_views.scss
@@ -3,8 +3,10 @@ div.view {
 }
 .views-view-grid.cols-2 {
   .row {
-    margin-left: 0;
-    margin-right: 0;
+    @include mobile {
+      margin-left: 0;
+      margin-right: 0;
+    }
   }
 }
 .view-certification-tests {
